<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.cdap.plugin</groupId>
    <artifactId>Kinesis-sparkStreamingSource</artifactId>
    <version>2.1.0-SNAPSHOT</version>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>CDAP</name>
            <email>cdap-dev@googlegroups.com</email>
            <organization>CDAP</organization>
            <organizationUrl>http://cdap.io</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:https://github.com/hydrator/Kinesis-sparkStreamingSource.git</connection>
        <developerConnection>scm:git:git@github.com:hydrator/Kinesis-sparkStreamingSource.git</developerConnection>
        <url>https://github.com/hydrator/Kinesis-sparkStreamingSource</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <url>https://issues.cask.co/browse/CDAP</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>sonatype.release</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype.snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <properties>
        <cdap.version>6.4.1</cdap.version>
        <cdap.plugin.version>2.4.0</cdap.plugin.version>
        <junit.version>4.11</junit.version>
        <spark.version>3.1.2</spark.version>
        <widgets.dir>widgets</widgets.dir>
        <docs.dir>docs</docs.dir>
        <main.basedir>${project.basedir}</main.basedir>
        <jackson.version>2.12.1</jackson.version>
        <commons.lang3.version>3.5</commons.lang3.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-api</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-api</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-unit-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>asm</groupId>
                    <artifactId>asm</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.httpcomponents</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-formats</artifactId>
            <version>${cdap.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-proto</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-batch</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-data-pipeline</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>hydrator-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.plugin</groupId>
            <artifactId>hydrator-common</artifactId>
            <version>${cdap.plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>13.0.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming-kinesis-asl_2.12</artifactId>
            <version>${spark.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.dataformat</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming_2.12</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.12</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>hadoop-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.esotericsoftware.reflectasm</groupId>
                    <artifactId>reflectasm</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.curator</groupId>
                    <artifactId>curator-recipes</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.tachyonproject</groupId>
                    <artifactId>tachyon-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-compiler</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.jetty.orbit</groupId>
                    <artifactId>javax.servlet</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.java.dev.jets3t</groupId>
                    <artifactId>jets3t</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-cbor</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang3.version}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <argLine>-Xmx3g -Djava.awt.headless=true -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC
                        -Djava.net.preferIPv4Stack=true
                    </argLine>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <reuseForks>false</reuseForks>
                    <reportFormat>plain</reportFormat>
                    <systemPropertyVariables>
                        <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
                    </systemPropertyVariables>
                    <includes>
                        <include>**/*TestsSuite.java</include>
                        <include>**/*TestSuite.java</include>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*TestRun.java</exclude>
                    </excludes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>2.14</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <version>0.10</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.doxia</groupId>
                        <artifactId>doxia-core</artifactId>
                        <version>1.6</version>
                        <exclusions>
                            <exclusion>
                                <groupId>xerces</groupId>
                                <artifactId>xercesImpl</artifactId>
                            </exclusion>
                        </exclusions>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>rat-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>LICENSE*.txt</exclude>
                                <!-- This file should be not be there, but I am excluding it for now -->
                                <exclude>*.rst</exclude>
                                <exclude>*.md</exclude>
                                <exclude>**/*.cdap</exclude>
                                <exclude>**/*.yaml</exclude>
                                <exclude>**/*.md</exclude>
                                <exclude>logs/**</exclude>
                                <exclude>.git/**</exclude>
                                <exclude>.idea/**</exclude>
                                <exclude>**/grok/patterns/**</exclude>
                                <exclude>conf/**</exclude>
                                <exclude>data/**</exclude>
                                <exclude>plugins/**</exclude>
                                <exlcude>**/*.patch</exlcude>
                                <exclude>**/logrotate.d/**</exclude>
                                <exclude>**/limits.d/**</exclude>
                                <exclude>**/*.json</exclude>
                                <exclude>**/*.json.template</exclude>
                                <exclude>**/MANIFEST.MF</exclude>
                                <!-- exclude any hack classes -->
                                <exclude>**/org/apache/hadoop/**</exclude>
                                <!-- exclude resource files-->
                                <exclude>**/resources/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>process-test-classes</phase>
                        <configuration>
                            <configLocation>checkstyle.xml</configLocation>
                            <suppressionsLocation>suppressions.xml</suppressionsLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                            <excludes>**/org/apache/cassandra/**,**/org/apache/hadoop/**</excludes>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>6.19</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.cdap</groupId>
                <artifactId>cdap-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <cdapArtifacts>
                        <parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>
                        <parent>system:cdap-data-streams[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>
                    </cdapArtifacts>
                </configuration>
                <executions>
                    <execution>
                        <id>create-artifact-config</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>create-plugin-json</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>3.5.1</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <_exportcontents>
                            io.cdap.plugin.kinesis.streaming.*;
                            com.amazonaws.services.kinesis.*;
                            org.apache.spark.streaming.kinesis.*;
                            org.apache.spark.streaming.scheduler.*;
                            com.amazonaws.*;
                            com.amazonaws.protocol.json.*;
                        </_exportcontents>
                        <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
                        <Embed-Transitive>true</Embed-Transitive>
                        <Embed-Directory>lib</Embed-Directory>
                        <!--Only @Plugin classes in the export packages will be included as plugin-->
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
